[gd_scene load_steps=5 format=2]

[ext_resource path="res://Dialog/Dialog.gd" type="Script" id=1]
[ext_resource path="res://Dialog/assets/dialog_red.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Dialog" type="HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -624.0
margin_top = -80.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
margin_right = 200.0
margin_bottom = 80.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 5
align = 2
autowrap = true

[node name="Box" type="MarginContainer" parent="."]
margin_left = 204.0
margin_right = 624.0
margin_bottom = 80.0
size_flags_horizontal = 0
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogBG" type="NinePatchRect" parent="Box"]
margin_left = 10.0
margin_right = 410.0
margin_bottom = 70.0
rect_min_size = Vector2( 400, 0 )
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="Box"]
margin_left = 10.0
margin_right = 410.0
margin_bottom = 70.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Text" type="RichTextLabel" parent="Box/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 390.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timers" type="Node" parent="Box"]

[node name="Timer" type="Timer" parent="Box/Timers"]
wait_time = 0.1

[node name="StartDelay" type="Timer" parent="Box/Timers"]
wait_time = 5.0
one_shot = true

[node name="EndDelay" type="Timer" parent="Box/Timers"]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_in = SubResource( 1 )
anims/fade_out = SubResource( 2 )
[connection signal="timeout" from="Box/Timers/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Box/Timers/StartDelay" to="." method="_on_StartDelay_timeout"]
[connection signal="timeout" from="Box/Timers/EndDelay" to="." method="_on_EndDelay_timeout"]
